# bbdd-final-2024

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: pyproject.toml  server.py
backend/backend/backend/: server.py
backend/dockerfiles/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/domain/: EVSE.ts  Experience.ts  Report.ts
frontend/src/app/evse-list/: evse-delete-confirm.html  evse-detail-dialog.html  evse-list.component.css  evse-list.component.html  evse-list.component.ts
frontend/src/app/main-menu/: main-menu.component.html  main-menu.component.ts
frontend/src/app/main-menu/options/: options.component.html  options.component.ts
frontend/src/app/report/: report.component.css  report.component.html  report.component.ts
frontend/src/app/report/top-five/: top-five.component.html  top-five.component.ts
frontend/src/app/report/top-five/top-five-list/: top-five-list.component.css  top-five-list.component.html  top-five-list.component.ts
frontend/src/app/report/totalizer/: totalizer.component.html  totalizer.component.ts
frontend/src/app/report/totalizer/totalizer-list/: totalizer-list.component.css  totalizer-list.component.html  totalizer-list.component.spec.ts  totalizer-list.component.ts
frontend/src/app/services/: EVSE.service.ts  report.service.ts
volumes/: mocked_data.sql  schema.sql
